170804 main tabLayout fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true">
         <activity
             android:name=".LauncherActivity"
             android:theme="@style/MyAppTheme.NoActionBar">
@@ -24,7 +25,7 @@
         <activity
             android:name=".AccountActivity"
             android:theme="@style/MyAppTheme.NoActionBar"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:theme="@style/MyAppTheme.NoActionBar">
         </activity>
     </application>
 
