--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".LauncherActivity"
             android:theme="@style/MyAppTheme.NoActionBar">
@@ -21,12 +21,15 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/MyAppTheme.NoActionBar"></activity>
+            android:theme="@style/MyAppTheme.NoActionBar" />
         <activity
             android:name=".AccountActivity"
+            android:theme="@style/MyAppTheme.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/MyAppTheme.NoActionBar"></activity>
-        <activity android:name=".MainActivity" android:theme="@style/MyAppTheme.NoActionBar">
-        </activity>
+        <activity android:name=".SharedItemActivity"
+            android:theme="@style/MyAppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
